@startuml

title __API_HANDLERS's Class Diagram__\n

  package  {
    package backgroundServices.API_Handlers {
      interface ApiRequestHandler {
          {abstract} + getApiResponseResults()
          {abstract} + getApiResponseKeys()
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      class getRequestHandler {
          - apiProperties : Properties
          - apiResponse : JSONObject
          + getRequestHandler()
          + getAllAirports()
          + getAllFlights()
          + getFlightsByDepartureAirport()
          + getDiscountsByFlightID()
          + getUserInformation()
          + getUserInformation()
          + getUserInformation()
          + getApiResponseResults()
          + getApiResponseKeys()
      }
    }
  }
  

  package  {
    package backgroundServices.API_Handlers {
      class insertRequestHandler {
          - apiProperties : Properties
          - apiResponse : JSONObject
          + insertRequestHandler()
          + addNewUser()
          + addNewDiscount()
          + getApiResponseResults()
          + getApiResponseKeys()
      }
    }
  }
  

  getRequestHandler -up-|> ApiRequestHandler
  getRequestHandler o-- reader : myReader
  insertRequestHandler -up-|> ApiRequestHandler
  insertRequestHandler o-- reader : myReader


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
